package com.example;

import java.io.Reader;

public abstract class ReaderDecorator extends Reader {
    /**
     * Reader decorado
     */
    Reader reader;
}
