package com.example;

import java.io.Writer;

public abstract class WriterDecorator extends Writer{
    /**
     * Writer decorado
     */
    Writer writer;
}
